# verna-mcp-app

./: Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  requirements.txt
server/: auth.py  config.py  main.py  weather.py
