[project]
name = "verna-mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.27,<2",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
]
